--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -62,6 +62,7 @@
                             </span> wrote:
                         </p>
                         <div id="comment{{ comment.id }}">
+                            <!-- replaces line breaks in the comment text with the appropriate HTML line break -->
                             {{ comment.body | linebreaks }}
                         </div>
                         {% if not comment.approved and comment.author == user %}
@@ -82,6 +83,7 @@
                 <p>Posting as: {{ user.username }}</p>
                 <form id="commentForm" method="post" style="margin-top: 1.3em;">
                     {{ comment_form | crispy }}
+                    <!-- Django's protections against cross-site request forgery. Add every time we render a form -->
                     {% csrf_token %}
                     <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
