--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,7 +12,12 @@
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
+                <!-- The featured_image URL is stored in the CloudinaryField, invisible to us -->
+                {% if "placeholder" in post.featured_image.url %}
+                <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder image">
+                {% else %}
+                <img src="{{ post.featured_image.url }}" class="scale" alt="{{ post.title }}">
+                {% endif %}
             </div>
         </div>
     </div>
@@ -24,12 +29,12 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text">
+                <article class="card-text">
                     <!-- The safe filter tells Django that this content is  safe to be interpreted as HTML.
                     If you remove the safe filter, instead of rendering the HTML for us, Django displays 
                     all of the HTML tags as well as the text. -->
                     {{ post.content | safe }}
-                </p>
+                </article>
             </div>
         </div>
     </div>
@@ -59,22 +64,22 @@
                         {{ comment.author }}
                         <span class="font-weight-normal">
                             {{ comment.created_on }}
-                            </span> wrote:
-                        </p>
-                        <div id="comment{{ comment.id }}">
-                            <!-- replaces line breaks in the comment text with the appropriate HTML line break -->
-                            {{ comment.body | linebreaks }}
-                        </div>
-                        {% if not comment.approved and comment.author == user %}
-                        <p class="approval">
+                        </span> wrote:
+                    </p>
+                    <div id="comment{{ comment.id }}">
+                        <!-- replaces line breaks in the comment text with the appropriate HTML line break -->
+                        {{ comment.body | linebreaks }}
+                    </div>
+                    {% if not comment.approved and comment.author == user %}
+                    <p class="approval">
                         This comment is awaiting approval
-                        </p>
-                        {% endif %}
-                        {% if user.is_authenticated and comment.author == user %}
-                        <!-- The comment.id variable value will be passed to JS -->
-                        <button class="btn btn-delete" comment_id="{{ comment.id }}">Delete</button>
-                        <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
-                        {% endif %}
+                    </p>
+                    {% endif %}
+                    {% if user.is_authenticated and comment.author == user %}
+                    <!-- The comment.id variable value will be passed to JS -->
+                    <button class="btn btn-delete" comment_id="{{ comment.id }}">Delete</button>
+                    <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
+                    {% endif %}
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
@@ -101,32 +106,28 @@
 </div>
 
 <!-- Delete confirmation modal -->
-<div class="modal fade" id="deleteModal" tabindex="-1"
-  aria-labelledby="deleteModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title"
-          id="deleteModalLabel">Delete comment?</h5>
-        <button type="button" class="btn-close"
-          data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Are you sure you want to delete your comment?
-        This action cannot be undone.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary"
-          data-bs-dismiss="modal">Close</button>
-        <!-- href attribute is dynamically updated to the URL for the comment_delete view
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete your comment?
+                This action cannot be undone.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <!-- href attribute is dynamically updated to the URL for the comment_delete view
          (JS calls the modal and URL (filling in the href) when Delete button is clicked thanks to event listener. 
          The URL then calls the comment_delete view when the confirmation button (which now has an href of 
          "delete_comment/<int:comment_id>") is clicked) -->
-          <a id="deleteConfirm" href="#" class="btn
+                <a id="deleteConfirm" href="#" class="btn
           btn-danger">Delete</a>
-      </div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 
