--- a/templates/base.html
+++ b/templates/base.html
@@ -50,22 +50,21 @@
                     </li>
                     <!-- Second navbar item -->
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == about_url %}active{%endif%}"
-                          aria-current="page" href="{% url 'about' %}">About</a>
+                        <a class="nav-link {% if request.path == about_url %}active" aria-current="page{% endif %}" href="{% url 'about' %}">About</a>
                     </li>
                     <!-- Auhentication -->
                     <!-- The URLs and views these link to are in the allauth.accounts app -->
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-	                    <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
+	                    <a class="nav-link {% if request.path == logout_url %}active" aria-current="page{% endif %}" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-	                    <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+	                    <a class="nav-link {% if request.path == signup_url %}active" aria-current="page{% endif %}"
 		                    href="{% url 'account_signup' %}">Register</a>
                     </li>
                     <li class="nav-item">
-	                    <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'account_login' %}">Login</a>
+	                    <a class="nav-link {% if request.path == login_url %}active" aria-current="page{% endif %}" href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
 
